--- a/index.html
+++ b/index.html
@@ -38,40 +38,6 @@
         </div>
       </div>
     </div>
-    <script>
-      let fact = document.getElementById("fact");
-      let factText = document.getElementById("factText");
-
-      let numberInput = document.getElementById("numberInput");
-      numberInput.addEventListener("input", getFactFetch);
-
-      // function getFactAjax() {
-      //   let number = numberInput.value;
-
-      //   let xhr = new XMLHttpRequest(); //Ajax
-      //   xhr.open('GET', 'http://numbersapi.com/'+number);
-
-      //   xhr.onload = function() {
-      // if (this.status == 200 && number != '') {
-      //     fact.style.display = 'block';
-      //     factText.innerText = this.responseText;
-      // }
-      //   }
-      //   xhr.send();
-      // }
-
-      function getFactFetch() {
-        let number = numberInput.value;
-        fetch("http://numbersapi.com/" + number)
-          .then((response) => response.text())
-          .then((data) => {
-            if (number != "") {
-              fact.style.display = "block";
-              factText.innerText = data;
-            }
-          })
-          .catch((err) => console.log(err));
-      }
-    </script>
+    <script src="/script.js"></script>
   </body>
 </html>
